upload fb images to azure

--- a/client/serendipity.html
+++ b/client/serendipity.html
@@ -9,7 +9,7 @@
 
   <div id="images">
     {{#each photos}}
-      <img src="{{source}}" />
+      <img src="{{this}}" />
     {{/each}}
   </div>
 </body>
