--- a/client/serendipity.html
+++ b/client/serendipity.html
@@ -5,7 +5,7 @@
 <body>
   <h1>Welcome to Qiming's super awesome Meteor Website</h1>
 
-  <button>Login with Facebook</button>
+  <button>Clear All Users</button>
 
   <div id="images">
     {{#each photos}}
