server publishes to collection called matches, when the current user's matches list changes

--- a/client/serendipity.html
+++ b/client/serendipity.html
@@ -12,6 +12,10 @@
   </div>
 
   <div class="operation">
+    <button id="deleteCurrentUser">Clear current user</button>
+  </div>
+
+  <div class="operation">
     <a href="/photos">View Photos</a>
   </div>
 
