debug way to add connections, remove connections

--- a/client/serendipity.html
+++ b/client/serendipity.html
@@ -16,6 +16,14 @@
   </div>
 
   <div class="operation">
+    <button id="addConnection">Add a Connection</button>
+  </div>
+
+  <div class="operation">
+    <button id="deleteCurrentUserConnections">Clear current user connections</button>
+  </div>
+
+  <div class="operation">
     <a href="/photos">View Photos</a>
   </div>
 
