meteor server now publishes to 'messages' the messages that are relevant the the current user

--- a/client/serendipity.html
+++ b/client/serendipity.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="operation">
-    <button id="addConnection">Add a Connection</button>
+    <button id="deleteCurrentUserMessages">Clear current user messages</button>
   </div>
 
   <div class="operation">
