meteor server publishes 3 topics: 'currentUser', 'connectedUsers', 'matchedUsers'. 'currentUser' addes the current user's info into the client users collection. 'connectedUsers' adds a connetion object into the 'connections' collection, and the connected user into the users collection. 'matchedUsers' adds an object into the 'matches' collection, and the corresponding matched user into the users collection

--- a/client/serendipity.html
+++ b/client/serendipity.html
@@ -16,6 +16,10 @@
   </div>
 
   <div class="operation">
+    <button id="clearCurrentUserMatches">Clear current user matches</button>
+  </div>
+
+  <div class="operation">
     <button id="deleteCurrentUserMessages">Clear current user messages</button>
   </div>
 
