in places where facebook is not supported (cough ... china .. cough) create a debug method to allow the creation of a test user for demo purposes.

--- a/client/serendipity.html
+++ b/client/serendipity.html
@@ -8,6 +8,9 @@
 <template name="home">
   <h1>Welcome to Qiming's super awesome Meteor Website</h1>
   <div class="operation">
+    <button id="testUser">Create New User</button>
+  </div>
+  <div class="operation">
     <button id="deleteUser">Clear All Users</button>
   </div>
 
