Add button to manually repopulate candidates for current user Use existence of previous candidate objects to determine whether match eligibility

--- a/client/admin.html
+++ b/client/admin.html
@@ -18,6 +18,10 @@
     <button id="deleteCurrentUser">Clear current user</button>
   </div>
 
+<div class="operation">
+    <button id="populateCandidateQueue">(re)populate candidate queue</button>
+</div>
+
   <div class="operation">
     <button id="clearCurrentUserMatches">Clear current user matches</button>
   </div>
