--- a/client/admin.html
+++ b/client/admin.html
@@ -47,11 +47,11 @@
       <h1>Current Game</h1>
 
       <br /><br />
-        {{#each matches}}
-            <div data-userid="{{this._id}}">
-                <span>{{this.firstName}}</span>
-                <img src="{{this.profilePhoto}}" alt="" height="100" width="100"/>
-                <span>Their Choice: {{this.theirChoice}}</span>
+        {{#each candidateQueue }}
+            <div data-candidateid="{{ this._id }}">
+                <span>{{ this.user.firstName }}</span>
+                <img src="{{ this.user.profilePhotoUrl }}" alt="" height="100" width="100"/>
+                <span>Their Choice: <b>{{ this.findInverse.choice }}</b></span>
                 <span>Make it -> </span>
                 <button class="yesmatch">yes</button>
                 <button class="nomatch">no</button>
