Removing extraneous services. Fix bugs and adding publications.coffee

--- a/client/admin.html
+++ b/client/admin.html
@@ -44,7 +44,7 @@
 
   <div class="operation">
     <div id="match">
-      <h1>Current Game</h1>
+      <h1>Candidate Queue</h1>
 
       <br /><br />
         {{#each candidateQueue }}
